--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-moment": "^1.1.3",
+    "react-spinners": "^0.13.8",
     "typescript": "5.0.2"
   },
   "devDependencies": {
